# template-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
src/: sub.py
