[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI project template for PDM"
authors = []
dependencies = [
    "fastapi>=0.111.0",
    "fastapi-cli>=0.0.4",
    "uvicorn[standard]>=0.30.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
start = "uvicorn main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"